--- a/ucsdscheduleme/wwwroot/css/main.scss
+++ b/ucsdscheduleme/wwwroot/css/main.scss
@@ -147,7 +147,7 @@ ul {
         background-color: $primary-color;
         display: table;
         height: $row-height;
-        width: calc(100%-1px);
+        width: calc(100% + 1px);
         position: relative;
 
         &::after {
@@ -243,9 +243,16 @@ ul {
     background-color: rgba(255,0,0,0.2);
 }
 
+
+.bottom-wrapper {
+    margin-top: 15px;
+    width: 100%;
+    max-height: 150px;
+    overflow-y: scroll;
+}
+
 .bottom {
     @include boxshadow();
-    margin-top: 15px;
     margin-bottom: 10px;
     font-size: 12px;
     background-color: white;
@@ -270,7 +277,6 @@ ul {
     }
 
     tbody {
-        display: block;
         overflow-y: scroll;
         width: 100%;
         height: 100px;
@@ -512,7 +518,7 @@ ul {
     }
 
     span {
-        margin-right: 10px;
+        margin-right: 5px;
     }
 }
 
